--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -220,13 +220,13 @@ services:
           echo
           warning_resources="true"
         fi
-        if (( disk_available < one_meg * 10 )); then
-          echo
-          echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
-          echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
-          echo
-          warning_resources="true"
-        fi
+        # if (( disk_available < one_meg * 10 )); then
+        #   echo
+        #   echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
+        #   echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
+        #   echo
+        #   warning_resources="true"
+        # fi
         if [[ $${warning_resources} == "true" ]]; then
           echo
           echo -e "\033[1;33mWARNING!!!: You have not enough resources to run Airflow (see above)!\e[0m"
